Fixed checkmark misalignment

--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -119,9 +119,11 @@ body {
 
 .coupon-img {
 	padding-bottom: 20px;
+	position: relative;
+	width: 100%;
 }
 
-.coupon-images img {
+.coupon-images .base64-coupon {
 	border-radius: 20px;
 	text-align: center;
 }
@@ -199,6 +201,10 @@ body {
 	width: 40%;
 	#height: 10%;
 	z-index:1000;
+}
+
+.checked img {
+	width: 100%;
 }
 
 .hide{
